add side bar click

--- a/index.html
+++ b/index.html
@@ -341,8 +341,8 @@
         // "Sedra 2A Level": SedraTwoALevel,
 
         "2B Roads Name": sedraTwoB,
-        // "Sedra 2B Station": sedraTwoBStation,
-        "TwoBStationLevel": TwoBStationLevel,
+        "Sedra 2B Station": sedraTwoBStation,
+        // "TwoBStationLevel": TwoBStationLevel,
 
 
 
