--- a/index.html
+++ b/index.html
@@ -170,41 +170,25 @@
     }).addTo(map);
     
     ///// my location  -----------------------
-    // map.locate({ setView: true, maxZoom: 16 });
-    // function onLocationFound(e) {
-    //     var radius = e.accuracy;
-    //     L.marker(e.latlng).addTo(map)
-    //         .bindPopup("I am Here").openPopup();
-    //     // .bindPopup("You are within " + radius + " meters from this point").openPopup();
-
-    //     L.circle(e.latlng, radius).addTo(map);
-    // }
-    // map.on('locationfound', onLocationFound);
-    // function onLocationError(e) {
-    //     alert(e.message);
-    // }
-    // map.on('locationerror', onLocationError);
- // Your existing location code
     map.locate({ setView: true, maxZoom: 16 });
     function onLocationFound(e) {
-      var radius = e.accuracy;
+        var radius = e.accuracy;
+        L.marker(e.latlng).addTo(map)
+            .bindPopup("I am Here").openPopup();
+        // .bindPopup("You are within " + radius + " meters from this point").openPopup();
 
-      L.marker(e.latlng).addTo(map)
-          .bindTooltip("I am Here");
-
-      L.circle(e.latlng, radius).addTo(map);
+        L.circle(e.latlng, radius).addTo(map);
     }
     map.on('locationfound', onLocationFound);
-
     function onLocationError(e) {
-      alert(e.message);
+        alert(e.message);
     }
     map.on('locationerror', onLocationError);
+     // Refresh location every 30 seconds
+    //  setInterval(function() {
+    //   map.locate({ setView: true, maxZoom: 16 });
+    // }, 30000);
 
-    // Refresh location every 30 seconds
-    setInterval(function() {
-      map.locate({ setView: true, maxZoom: 16 });
-    }, 30000);
     /*===================================================
                           GEOJSON               
     ===================================================*/
